Style the hover and active colors for anchor tags

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,14 @@ a {
 	color: teal;
 }
 
+a:active {
+	color: gold;
+}
+
+a:hover {
+	color: gold;
+}
+
 .instrument-button{
 	fill:#ffffff;
 	opacity:0.4;
