Update and rename main copy.css to default.css

--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,10 @@
 body {
   font-family: "Avenir", Arial, sans-serif;
-  font-size: 150%;
+  font-size: 70%;
+}
+
+h1, h2, h3, h4, h5, h5, p {
+  font-size:  270%;
 }
 
 table {
