--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,20 @@ body {
   font-family: "Avenir", Arial, sans-serif;
 }
 
+
+a {
+	color: teal;
+}
+
+a:hover {
+	color: darkturquoise;
+}
+
+a:active {
+	color: gold;
+}
+
+
 .note-root, .note-diamond, .note-circle {
   transform: scale(1.0);
   -ms-transform: scale(1.0);
