--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ a:active {
 .note-root svg {
   display: inline-block;
   vertical-align: middle;
-} 
+}
 
 .note-diamond svg {
   display: inline-block;
@@ -46,8 +46,8 @@ table {
   border-width: 1px;
   border-color: black;
 
-  
-  
+
+
 }
 
 
@@ -60,8 +60,12 @@ table.empty {
   border-radius: 5px;
   border-width: 1px;
   border-color: white;
-  
 
+
+}
+
+#navigation {
+  border-color: white;
 }
 
 td {
