--- a/css/main.css
+++ b/css/main.css
@@ -123,13 +123,15 @@ svg.broken rect{
 }
 
 /* <!-- Silent table  (HTML only)--> */
-table.silent {
+table.silent,
+table.empty {
   border-color:#BBBBBB;
   border-width:0;
 }
 
 /* <!-- Silent table  (HTML only)--> */
-svg.silent rect {
+svg.silent rect,
+svg.empty rect {
   stroke: grey;
   stroke-width:0;
   fill:none;
@@ -252,7 +254,8 @@ svg.harp-button-14 .unhighlighted.instrument-button-icon {
 }
 /* <!-- Note background when the chord is or is silent --> */
 table.broken .highlighted-0.instrument-button,
-table.silent .highlighted-0.instrument-button {
+table.silent .highlighted-0.instrument-button,
+table.empty .highlighted-0.instrument-button {
   stroke-width: 0;
   stroke: white;
   fill: none;
@@ -268,7 +271,9 @@ svg.broken .unhighlighted.instrument-button-icon {
 
 /* <!-- Small note buttons when the chord is silent --> */
 table.silent .unhighlighted.instrument-button-icon,
-svg.silent .unhighlighted.instrument-button-icon {
+table.empty .unhighlighted.instrument-button-icon,
+svg.silent .unhighlighted.instrument-button-icon,
+svg.empty .unhighlighted.instrument-button-icon {
   stroke-width: 0;
   stroke: white;
   fill: none;
@@ -276,8 +281,11 @@ svg.silent .unhighlighted.instrument-button-icon {
 
 /* <!-- Middle note button when the chord is silent --> */
 table.silent svg.harp-button-7 .unhighlighted.instrument-button-icon,
+table.empty svg.harp-button-7 .unhighlighted.instrument-button-icon,
 svg.silent svg.harp-button-7 .unhighlighted.instrument-button-icon,
-svg.silent.harp-button-7 .unhighlighted.instrument-button-icon {
+svg.empty svg.harp-button-7 .unhighlighted.instrument-button-icon,
+svg.silent.harp-button-7 .unhighlighted.instrument-button-icon,
+svg.empty.harp-button-7 .unhighlighted.instrument-button-icon {
   stroke-width: 0;
   stroke: white;
   fill: #BBBBBB;
